--- a/web/Main.html
+++ b/web/Main.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="css/style.css" type="text/css" rel="stylesheet" />
 		<link href="css/magnific-popup.css" type="text/css" rel="stylesheet" />
-		<title>Planet</title>
+		<title>Planet-shop</title>
 	</head>
 	<body>
 		</div>
