--- a/webapp/web/Main.html
+++ b/webapp/web/Main.html
@@ -18,7 +18,7 @@
 					<a href="">Register</a>
 			</div>
 			<div class="hidden">
-				<form id="form" method="post">
+				<form id="form" method="post" action="">
 					<input type="text" name="name" placeholder="Имя" /><br>
 					<input type="password" name="password" placeholder="Пароль" /><br>
 					<button>Войти</button>
