--- a/webapp/web/html/Main.html
+++ b/webapp/web/html/Main.html
@@ -2,15 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="css/style.css" type="text/css" rel="stylesheet" />
-		<link href="css/magnific-popup.css" type="text/css" rel="stylesheet" />
+		<link href="../css/style.css" type="text/css" rel="stylesheet" />
+		<link href="../css/magnific-popup.css" type="text/css" rel="stylesheet" />
 		<title>Planet-shop</title>
 	</head>
 	<body>
 		</div>
 		<div class="header">
 			<div class="logo">
-				<a href="Main.html"><img src="img/shop-logo.png" alt="Shop logo"></a>
+				<a href="Main.html"><img src="../img/shop-logo.png" alt="Shop logo"></a>
 			</div>
 			<div class="login">
 					<a href="#form" class="popup">Login</a>
@@ -18,7 +18,7 @@
 					<a href="">Register</a>
 			</div>
 			<div class="hidden">
-				<form id="form" method="post" action="">
+				<form id="form" method="post" action="/login">
 					<input type="text" name="name" placeholder="Имя" /><br>
 					<input type="password" name="password" placeholder="Пароль" /><br>
 					<button>Войти</button>
@@ -31,13 +31,13 @@
 		<div class="content">
 			<p>Контент</p>
 			<div class="good-box">
-				<img src="img/ZalmanZ11.png" alt="" />
-				<a href="html/ZalmanZ11.html"><p>Zalman Z11</p></a>
-				<a href="html/ZalmanZ11.html"><img src="img/buy-btn.png" alt="" /></a>
+				<img src="../img/ZalmanZ11.png" alt="" />
+				<a href="ZalmanZ11.html"><p>Zalman Z11</p></a>
+				<a href="ZalmanZ11.html"><img src="../img/buy-btn.png" alt="" /></a>
 			</div>
 		</div>
-		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/common.js"></script>
+		<script src="../js/jquery-1.11.1.min.js"></script>
+		<script src="../js/jquery.magnific-popup.min.js"></script>
+		<script src="../js/common.js"></script>
 	</body>
 </html>
