--- a/webapp/web/html/ZalmanZ11.html
+++ b/webapp/web/html/ZalmanZ11.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="header">
 			<div class="logo">
-				<a href="../Main.html"><img src="../img/shop-logo.png" alt="Shop logo"></a>
+				<a href="Main.html"><img src="../img/shop-logo.png" alt="Shop logo"></a>
 			</div>
 			<div class="login">
 					<a href="#form" class="popup">Login</a>
