--- a/webapp/web/Main.html
+++ b/webapp/web/Main.html
@@ -21,7 +21,7 @@
 				<form id="form" method="post" action="login">
 					<input type="text" name="name" placeholder="Имя" /><br>
 					<input type="password" name="password" placeholder="Пароль" /><br>
-					<button>Войти</button>
+					<input type="submit" value = "Войти"/>
 				</form>
 			</div>
 		</div>
