Registration box added

--- a/webapp/web/Main.html
+++ b/webapp/web/Main.html
@@ -2,26 +2,47 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="../css/style.css" type="text/css" rel="stylesheet" />
-		<link href="../css/magnific-popup.css" type="text/css" rel="stylesheet" />
+		<link href="css/style.css" type="text/css" rel="stylesheet" />
+		<link href="css/magnific-popup.css" type="text/css" rel="stylesheet" />
 		<title>Planet-shop</title>
 	</head>
 	<body>
 		</div>
 		<div class="header">
 			<div class="logo">
-				<a href="Main.html"><img src="../img/shop-logo.png" alt="Shop logo"></a>
+				<a href="Main.html"><img src="img/shop-logo.png" alt="Shop logo"></a>
 			</div>
 			<div class="login">
-					<a href="#form" class="popup">Login</a>
+					<a href="#login-form" class="login-popup">Login</a>
 					<span>/</span>
-					<a href="">Register</a>
+					<a href="#reg-form" class="reg-popup">Register</a>
 			</div>
-			<div class="hidden">
-				<form id="form" method="post" action="login">
-					<input type="text" name="name" placeholder="Имя" /><br>
-					<input type="password" name="password" placeholder="Пароль" /><br>
-					<input type="submit" value = "Войти"/>
+			<div class="hidden-login">
+				<form id="login-form" method="post" action="login">
+					<span>Логин:</span><br />
+					<input type="text" name="name" placeholder="Имя" required/><br>
+					<span>Пароль:</span><br />
+					<input type="password" name="password" placeholder="Пароль" required/><br>
+					<a href="#">Забыли пароль?</a>
+					<a href="#reg-form" id="reg">Зарегестрироваться</a>
+					<input type="submit" class="log-reg-buttons" id="login-btn" value="Войти"/>
+				</form>
+			</div>
+			<div class="hidden-registration">
+				<form id="reg-form" method="post">
+					<span>Введите Ваше имя:</span><br />
+					<input type="text" name="reg-name" required/>
+					<span>Введите Ваш email:</span><br />
+					<input type="email" name="reg-email" required/>
+					<span>Введите Ваш пароль:</span><br />
+					<input type="password" name="reg-password" required/>
+					<span>Повторите пароль:</span><br />
+					<input type="password" name="reg-repassword" required/>
+					<div class="user-agreement">
+						<input type="checkbox" name="reg-licenceAgree" required/>
+						<span>Я принимаю <a href="#">пользовательское соглашение.</a></span>
+					</div>
+					<input type="submit" class="log-reg-buttons" id="reg-btn" value="Зарегистрироваться"/>
 				</form>
 			</div>
 		</div>
@@ -31,13 +52,13 @@
 		<div class="content">
 			<p>Контент</p>
 			<div class="good-box">
-				<img src="../img/ZalmanZ11.png" alt="" />
+				<img src="img/ZalmanZ11.png" alt="" />
 				<a href="ZalmanZ11.html"><p>Zalman Z11</p></a>
-				<a href="ZalmanZ11.html"><img src="../img/buy-btn.png" alt="" /></a>
+				<a href="ZalmanZ11.html"><img src="img/buy-btn.png" alt="" /></a>
 			</div>
 		</div>
-		<script src="../js/jquery-1.11.1.min.js"></script>
-		<script src="../js/jquery.magnific-popup.min.js"></script>
-		<script src="../js/common.js"></script>
+		<script src="js/jquery-1.11.1.min.js"></script>
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="js/common.js"></script>
 	</body>
 </html>
