--- a/webapp/web/Main.html
+++ b/webapp/web/Main.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="header">
 			<div class="logo">
-				<a href="Main.html"><img src="img/shop-logo.png" alt="Shop logo"></a>
+				<a href="Main.html"><img src="img/shop-logo.png" alt="Shop-logo"></a>
 			</div>
 			<div class="login">
 					<a href="#login-form" class="login-popup">Login</a>
