Registration box added

--- a/webapp/web/Main.html
+++ b/webapp/web/Main.html
@@ -24,7 +24,7 @@
 					<span>Пароль:</span><br />
 					<input type="password" name="password" placeholder="Пароль" required/><br>
 					<a href="#">Забыли пароль?</a>
-					<a href="#reg-form" id="reg">Зарегестрироваться</a>
+					<a href="#reg-form" class="reg-popup" id="reg">Зарегестрироваться</a>
 					<input type="submit" class="log-reg-buttons" id="login-btn" value="Войти"/>
 				</form>
 			</div>
