Test menu added..

--- a/webapp/web/Main.html
+++ b/webapp/web/Main.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="css/style.css" type="text/css" rel="stylesheet" />
 		<link href="css/magnific-popup.css" type="text/css" rel="stylesheet" />
+		<link href="css/menu_style.css" type="text/css" rel="stylesheet" />
 		<title>Planet-shop</title>
 	</head>
 	<body>
@@ -46,19 +47,65 @@
 				</form>
 			</div>
 		</div>
-		<div class="sidebar">
-			<p>Каталог товаров</p>
+		<div class="menu">
+			<div class="inner-menubox">
+				<ul id="menu-list">
+					<li><a href="#" class="drop">Телефоны, MP3</a>
+						<div class="dropdown_1column">
+							<div class="goods-box">
+								<a href="#"><img src="img/smartphones.png" alt="Смартфоны" /></a>
+								<a href="#"><p>Смартфоны</p></a>
+							</div>
+							<div class="goods-box">
+								<a href="#"><img src="img/imp3.png" alt="Смартфоны" /></a>
+								<a href="#"><p>MP3</p></a>
+							</div>
+						</div>
+					</li>
+					<li><a href="#" class="drop" >Ноутбуки, планшеты и компьютеры</a>
+						<div class="dropdown_2column">
+							<p>5 Columns content</p>
+						</div>
+					</li>
+					<li><a href="#" class="drop">Бытовая техника и интерьер</a>
+						<div class="dropdown_3column">
+							<p>4 Columns content</p>
+						</div>
+					</li>
+					<li><a href="#" class="drop">Аудио, Видео, Фото, ТВ</a>
+						<div class="dropdown_4column">
+							<p>3 Columns content</p>
+						</div>
+					</li>
+					<li><a href="#" class="drop">Автотовары</a>
+						<div class="dropdown_5column">
+							<p>2 Columns content</p>
+						</div>
+					</li>
+					<li><a href="#" class="drop">Товары для дома</a>
+						<div class="dropdown_6column">
+							<p>1 Column content</p>
+						</div>
+					</li>
+					<li><a href="#" class="drop">Музыкальные инструменты</a>
+						<div class="dropdown_7column">
+							<p>1 Column content</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
+
 		<div class="content">
-			<p>Контент</p>
-			<div class="good-box">
-				<img src="img/ZalmanZ11.png" alt="" />
-				<a href="ZalmanZ11.html"><p>Zalman Z11</p></a>
-				<a href="ZalmanZ11.html"><img src="img/buy-btn.png" alt="" /></a>
-			</div>
-			<div class="video" width="565" height="315">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/UqzEwQd6TUk" frameborder="0" allowfullscreen></iframe>
-			</div>
+			<!--<p>Контент</p>-->
+			<!--<div class="good-box">-->
+				<!--<img src="img/ZalmanZ11.png" alt="" />-->
+				<!--<a href="ZalmanZ11.html"><p>Zalman Z11</p></a>-->
+				<!--<a href="ZalmanZ11.html"><img src="img/buy-btn.png" alt="" /></a>-->
+			<!--</div>-->
+			<!--<div class="video" width="565" height="315">-->
+				<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/UqzEwQd6TUk" frameborder="0" allowfullscreen></iframe>-->
+			<!--</div>-->
 		</div>
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/jquery.magnific-popup.min.js"></script>
