--- a/webapp/web/html/Registration-page.html
+++ b/webapp/web/html/Registration-page.html
@@ -2,19 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="css/style.css" type="text/css" rel="stylesheet" />
-		<link href="css/magnific-popup.css" type="text/css" rel="stylesheet" />
-		<link href="css/menu_style.css" type="text/css" rel="stylesheet" />
+		<link href="../css/style.css" type="text/css" rel="stylesheet" />
+		<link href="../css/magnific-popup.css" type="text/css" rel="stylesheet" />
+		<link href="../css/menu_style.css" type="text/css" rel="stylesheet" />
+		<link href="../css/pers_cabinet.css" type="text/css" rel="stylesheet" />
 		<title>Planet-shop</title>
 	</head>
 	<body>
 		<div class="header">
 			<div class="logo">
-				<a href="Main.html"><img src="img/shop-logo.png" alt="Shop-logo"></a>
+				<a href="../Main.html"><img src="../img/shop-logo.png" alt="Shop-logo"></a>
 			</div>
 			<div class="login">
-				Здраствуйте,
-				<a href="#login-form" class="login-popup"><img src="img/user_icon.png" alt="user icon" /><span>войдите в личный кабинет</span></a>
+					Здраствуйте, 
+					<a href="#login-form" class="login-popup"><img src="../img/user_icon.png" alt="user icon" /><span>войдите в личный кабинет</span></a>
 			</div>
 			<div class="hidden-login">
 				<form id="login-form" method="post" action="login">
@@ -23,7 +24,7 @@
 					<span>Пароль:</span><br />
 					<input type="password" name="password" placeholder="Пароль" required/><br>
 					<a href="#">Забыли пароль?</a>
-					<a href="html/Registration-page.html" id="reg">Зарегистрироваться</a>
+					<a href="html/Registration-page.html">Зарегистрироваться</a>
 					<input type="submit" class="log-reg-buttons" id="login-btn" value="Войти"/>
 				</form>
 			</div>
@@ -34,62 +35,66 @@
 					<li><a href="#" class="drop">Телефоны, MP3</a>
 						<div class="dropdown_1column">
 							<div class="goods-box">
-								<a href="#"><img src="img/smartphones.png" alt="Смартфоны" /></a>
+								<a href="#"><img src="../img/smartphones.png" alt="Смартфоны" /></a>
 								<a href="#"><p>Смартфоны</p></a>
 							</div>
 							<div class="goods-box">
-								<a href="#"><img src="img/imp3.png" alt="Смартфоны" /></a>
+								<a href="#"><img src="../img/imp3.png" alt="Смартфоны" /></a>
 								<a href="#"><p>MP3</p></a>
 							</div>
 						</div>
 					</li>
 					<li><a href="#" class="drop" >Ноутбуки, планшеты и компьютеры</a>
 						<div class="dropdown_2column">
-							<p>5 Columns content</p>
+						<p>5 Columns content</p>
 						</div>
 					</li>
 					<li><a href="#" class="drop">Бытовая техника и интерьер</a>
 						<div class="dropdown_3column">
-							<p>4 Columns content</p>
+						<p>4 Columns content</p>
 						</div>
 					</li>
 					<li><a href="#" class="drop">Аудио, Видео, Фото, ТВ</a>
 						<div class="dropdown_4column">
-							<p>3 Columns content</p>
+						<p>3 Columns content</p>
 						</div>
 					</li>
 					<li><a href="#" class="drop">Автотовары</a>
 						<div class="dropdown_5column">
-							<p>2 Columns content</p>
+						<p>2 Columns content</p>
 						</div>
 					</li>
 					<li><a href="#" class="drop">Товары для дома</a>
 						<div class="dropdown_6column">
-							<p>1 Column content</p>
+						<p>1 Column content</p>
 						</div>
 					</li>
 					<li><a href="#" class="drop">Музыкальные инструменты</a>
 						<div class="dropdown_7column">
-							<p>1 Column content</p>
+						<p>1 Column content</p>
 						</div>
 					</li>
 				</ul>
 			</div>
+		</div>	
+		<div class="registration">
+				<p>Регистрация</p><hr />
+				<form id="reg-form" method="post">
+					<span>Введите Ваше имя:</span><br />
+					<input type="text" name="reg-name" required/><br />
+					<span>Введите Ваш email:</span><br />
+					<input type="email" name="reg-email" required/><br />
+					<span>Введите Ваш пароль:</span><br />
+					<input type="password" name="reg-password" required/><br />
+					<span>Повторите пароль:</span><br />
+					<input type="password" name="reg-repassword" required/><br />
+					<input id="reg-checkbox" type="checkbox" name="reg-licenceAgree" required/>
+					<span>Я принимаю <a href="#">пользовательское соглашение.</a></span><br />
+					<input type="submit" class="log-reg-buttons" id="reg-btn" value="Зарегистрироваться"/>
+				</form>
 		</div>
-
-		<div class="content">
-			<!--<p>Контент</p>-->
-			<!--<div class="good-box">-->
-				<!--<img src="img/ZalmanZ11.png" alt="" />-->
-				<!--<a href="ZalmanZ11.html"><p>Zalman Z11</p></a>-->
-				<!--<a href="ZalmanZ11.html"><img src="img/buy-btn.png" alt="" /></a>-->
-			<!--</div>-->
-			<!--<div class="video" width="565" height="315">-->
-				<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/UqzEwQd6TUk" frameborder="0" allowfullscreen></iframe>-->
-			<!--</div>-->
-		</div>
-		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/common.js"></script>
+		<script src="../js/jquery-1.11.1.min.js"></script>
+		<script src="../js/jquery.magnific-popup.min.js"></script>
+		<script src="../js/common.js"></script>
 	</body>
 </html>
